# lobby-bots

./: .coveragerc  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prospector.yaml  CONTRIBUTING.md  Dockerfile.echelon  Dockerfile.ejabberd  Dockerfile.xpartamupp  README.md  docker-compose.persistent-db.yml  docker-compose.yml  ejabberd_example.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  pre-commit.yml  unittests.yml
docker/: ejabberd.yml
mod_ipstamp/src/: mod_ipstamp.erl
moderation/: .coveragerc  .markdownlint.yaml  .prospector.yaml  README.md  requirements.txt  setup.py  tox.ini
moderation/chat_monitor/: chat_monitor.py  models.py
moderation/chatbot_interface/: chatbot_interface.py
moderation/moderation/: moderation.py  stanzas.py
moderation/moderation/data/: database.py  models.py
moderation/web_interface/: README.md  run.py
moderation/web_interface/web_interface/: __init__.py  web_interface.py  web_user_model.py
moderation/web_interface/web_interface/static/styles/: index.css
moderation/web_interface/web_interface/templates/: index.html  nav.html
tests/: test_echelon.py  test_elo.py  test_lobby_ranking.py  test_utils.py  test_xpartamupp.py
xpartamupp/: __init__.py  echelon.py  elo.py  lobby_moderation_db.py  lobby_ranking.py  modbot.py  stanzas.py  utils.py  xpartamupp.py
