[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "xpartamupp"
description = "Multiplayer lobby bots for Pyrogenesis-based games"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GNU General Public License v2 or later (GPLv2+)"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: XMPP",
]
dependencies = [
    "cachetools",
    "defusedxml",
    "dateparser",
    "simplemma[marisa-trie]>=1.1.1",
    "slixmpp>=1.8.0",
    "sqlalchemy>=2.0.4",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "coverage",
    "hypothesis",
    "parameterized",
]

[tool.setuptools]
packages = ["xpartamupp"]

[tool.setuptools_scm]

[project.scripts]
echelon = "xpartamupp.echelon:main"
echelon-db = "xpartamupp.lobby_ranking:main"
modbot = "xpartamupp.modbot:main"
modbot-db = "xpartamupp.lobby_moderation_db:main"
xpartamupp = "xpartamupp.xpartamupp:main"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "COM812",
    "D104",
    "EM",
    "FBT",
    "ISC001",
    "PERF401",
    "PLR2004",
    "PT",
    "PTH",
    "SIM105",
    "TRY003",
    "UP038"
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-dummy-args = true

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S106"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 10
max-nested-blocks = 4
max-returns = 8
